# docs-rag

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
db/: schema.sql
docs/: api.md  architecture.md  chunking.md  pipeline.md
odl/: Dockerfile  server.py
paddle/: Dockerfile  server.py
qdrant/: config.yaml
scripts/: eval_index_health.py  eval_ocr.py  eval_ragas.py  smoke_test.py  trace_summary.py
src/: api.py  celery_app.py
src/v1/: logger.py  models.py  repository.py  router.py  schemas.py
src/v1/config/: __init__.py  database.py  qdrant.py  settings.py
src/v1/guards/: __init__.py  injection.py  output.py  pii.py
src/v1/rag/: __init__.py  classifier.py  clients.py  grader.py  prompts.py  search.py  sibling.py  tokens.py  trace.py
src/v1/task/: __init__.py  chunk.py  embed.py  extract.py  ocr.py
src/v1/utils/: __init__.py  chunker.py  chunker_adaptive.py  chunker_fixed.py  embedding.py  ocr.py  preprocess.py
tests/: conftest.py
tests/guards/: test_injection.py  test_output.py  test_pii.py
tests/rag/: test_critic_integration.py  test_grader.py  test_trace_record.py  test_trace_summary_feedback.py
