[project]
name = "docs-rag"
version = "0.1.0"
description = "문서 AI 처리 시스템"
authors = [{name = "DJ.CHOI"}]
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.11",
    "qdrant-client>=1.16.2",
    "langchain-openai>=0.3.0",
    "tqdm>=4.67.1",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "celery>=5.3.0",
    "flower>=2.0.0",
    "sentence-transformers>=5.2.2",
    "paddlepaddle>=3.3.0",
    "pymupdf>=1.27.1",
    "opencv-python==4.10.0.84",
    "paddleocr>=3.4.0",
    "layoutparser>=0.3.4",
    "paddlex[ocr]>=3.4.2",
    "flagembedding>=1.3.5",
    "transformers>=5.3.0",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "torch>=2.7.0",
    "tiktoken>=0.7.0",
    "ragas>=0.4.3",
    "langchain-community>=0.4.1",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"
name = "pytorch-cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[dependency-groups]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
# src/ sys.path 등록은 tests/conftest.py — docker volume 누락 / 컨테이너 재생성 누락에
# 취약한 pyproject.toml pythonpath 대신 conftest.py 로 고정 (tests/는 항상 마운트됨).
markers = [
    "integration: docker 컨테이너 내 실행 필요 (host에서 /app/model 경로 부재로 실패). default skip.",
]
# Default-skip integration tests. 명시적으로 실행하려면 `pytest -m integration`.
# 이유: integration test는 src/v1/router.py module-level import가 /app/model 경로 의존.
addopts = "-m 'not integration'"
